--- a/website/static/css/prism-theme.css
+++ b/website/static/css/prism-theme.css
@@ -1,3 +1,7 @@
+code {
+  background: var(--color-code-block);
+}
+
 .token.function {
   color: #dcdcaa;
 }
